--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -31,9 +31,14 @@ ADD_LIBRARY(${APNGASM_DYNAMIC_LIB_TARGET} SHARED
   ${PROJECT_SOURCE_DIR}/src/spec/priv/specwriterimpl.cpp
   ${PROJECT_SOURCE_DIR}/src/listener/apngasmlistener.cpp
 )
-
+SET_TARGET_PROPERTIES(${APNGASM_DYNAMIC_LIB_TARGET}
+	PROPERTIES
+  CXX_STANDARD 17
+)
 
 # Link libraries
+TARGET_LINK_LIBRARIES(${APNGASM_DYNAMIC_LIB_TARGET} stdc++fs)
+
 FIND_PACKAGE(PNG REQUIRED)
 INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
 TARGET_LINK_LIBRARIES(${APNGASM_DYNAMIC_LIB_TARGET} ${PNG_LIBRARY})
@@ -46,7 +51,7 @@ TARGET_LINK_LIBRARIES(${APNGASM_DYNAMIC_LIB_TARGET} ${ZLIB_LIBRARIES})
 IF(APPLE OR WIN32)
   SET(Boost_USE_STATIC_LIBS ON)
 ENDIF(APPLE OR WIN32)
-FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options regex filesystem system)
+FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options regex system)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(${APNGASM_DYNAMIC_LIB_TARGET} ${Boost_LIBRARIES})
 
