--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -23,7 +23,10 @@ ADD_EXECUTABLE(apngasm-cli
     ${PROJECT_SOURCE_DIR}/src/cli.cpp
 )
 SET_TARGET_PROPERTIES(apngasm-cli
-	PROPERTIES OUTPUT_NAME apngasm)
+	PROPERTIES
+  OUTPUT_NAME apngasm
+  CXX_STANDARD 17
+)
 
 # Link libraries
 LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../lib)
@@ -31,7 +34,7 @@ INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/../lib/src
   ${PROJECT_BINARY_DIR}/../lib/src
 )
-TARGET_LINK_LIBRARIES(apngasm-cli apngasm)
+TARGET_LINK_LIBRARIES(apngasm-cli apngasm stdc++fs)
 
 FIND_PACKAGE(ZLIB REQUIRED)
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
@@ -40,7 +43,7 @@ TARGET_LINK_LIBRARIES(apngasm-cli ${ZLIB_LIBRARIES})
 IF(APPLE OR WIN32)
   SET(Boost_USE_STATIC_LIBS ON)
 ENDIF(APPLE OR WIN32)
-FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options regex filesystem system) 
+FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options regex system) 
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS}) 
 TARGET_LINK_LIBRARIES(apngasm-cli ${Boost_LIBRARIES})
 
